fix: incorrect alignment of arrow icon in testimonials

--- a/src/stylesheets/components/_arrow.scss
+++ b/src/stylesheets/components/_arrow.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/" as *;
 .testimonials {
   &__arrow {
-    @include flex($direction: column, $align: flex-start);
+    @include flex($justify: center, $align: center);
     border-radius: 8px;
     gap: 4.612px;
     background-color: #fffafa;
@@ -10,8 +10,8 @@
     border: none;
     cursor: pointer;
 
-    &--prev {
-      transform: rotate(3.1416rad);
+    &--next {
+      transform: rotate(180deg);
     }
 
     &--next,
@@ -27,6 +27,26 @@
     transform: scale(10);
     max-width: 100%;
     max-height: 100%;
+    display: block;
+  }
+
+  @include tablet {
+    &__arrow {
+      gap: 10px;
+      border-radius: 17px;
+      box-shadow: 3px 2px 6px 1px rgba(0, 0, 0, 0.25);
+      padding: 28px 13px;
+      border: none;
+      cursor: pointer;
+      &--next,
+      &--prev {
+        width: 51px;
+        height: 57px;
+      }
+    }
+    &__arrow-icon {
+      transform: scale(18);
+    }
   }
 
   &__both-arrow {
